src/scss/components/mobile-btn.scss
.mobile-btn {
  display: none;
  align-items: center;
  width: 4rem;
  height: 4rem;
  position: absolute;
  top: 2rem;
  right: 1.5rem;
  z-index: 51;

  &::before,
  &::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 3px;
    background-color: #000;
    transition: all 0.3s ease;
  }

  &::before {
    top: 1rem;
    left: 0;
  }
  &::after {
    bottom: 1rem;
    right: 0;
  }

  span {
    display: block;
    width: 100%;
    height: 3px;
    background-color: #000;
    transition: all 0.3s ease;
  }
  @media (max-width: 991.8px) {
    display: flex;
  }

  &:hover {
    &::before,
    &::after,
    span {
      background-color: $green;
    }
  }

  &.mobile-btn--active {
    &::before {
      top: 50%;
      transform: translateY(-50%) rotate(-45deg);
      transition: all 0.5s ease-out;
    }
    &::after {
      bottom: 50%;
      transform: translateY(50%) rotate(45deg);
      transition: all 0.5s ease-out;
    }
    span {
      background-color: transparent;
    }
  }
  &.mobile-btn--active:hover {
    &::before,
    &::after,
    span {
      background-color: red;
    }
  }
}

